将JDK版本从21切换到1.8