@@ -10,7 +10,10 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.time.OffsetDateTime;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
@@ -23,9 +26,9 @@ public class SnapshotWriterServiceImpl implements SnapshotWriterService {
 
     public static final int DEFAULT_SNAPSHOT_EVERY_N_EVENTS = 50;
 
-    private static final Set<String> TRANSIENT_EVENT_TYPES = Set.of(
+    private static final Set<String> TRANSIENT_EVENT_TYPES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
             "text_delta", "reasoning_delta", "TextDelta", "ReasoningDelta"
-    );
+    )));
 
     private final PostgresEventStoreService eventStore;
     private final int everyN;
@@ -42,7 +45,7 @@ public class SnapshotWriterServiceImpl implements SnapshotWriterService {
     @Override
     public void onEvent(EventDto event) {
         String sessionId = event.getSessionId();
-        if (sessionId == null || sessionId.isBlank()) {
+        if (sessionId == null || sessionId.trim().isEmpty()) {
             return;
         }
         if (event.getType() != null && TRANSIENT_EVENT_TYPES.contains(event.getType())) {
